# Crucible

./: .env.example  .gitignore  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES  docker-compose.dify.yml  docker-compose.yml  setup-server.sh  setup.sh
.githooks/: post-commit
.github/workflows/: docker-publish.yml  test.yml
api/: .coveragerc  Dockerfile  cli_executor.py  crypto.py  deployer.py  main.py  models.py  pyproject.toml  registry.py  requirements.txt
api/tests/: conftest.py  test_crypto.py  test_deployer.py  test_main.py  test_models.py  test_registry.py
docs/: SETUP.md  TESTING.md  awesome-mcp-servers-entry.md  index.html  style.css
docs/ja/: index.html
ui/: .gitignore  Dockerfile  generate_release_notes.py  package-lock.json  package.json  vitest.config.ts
ui/.storybook/: main.ts  preview.ts  preview.tsx
ui/design-system/: MASTER.md
ui/public/: release_notes.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/about/: page.tsx
ui/src/app/api/: proxy.test.ts  proxy.ts
ui/src/app/guide/: page.tsx
ui/src/components/: about-tab.tsx  catalog-import.tsx  guide-tab.tsx  header-nav.tsx  register-tab.tsx  release-notes-tab.tsx  server-card.tsx  servers-tab.tsx
ui/src/i18n/: en.json  index.tsx  ja.json
ui/src/lib/: api.test.ts  api.ts  types.ts  utils.test.ts
ui/src/stories/: AboutTab.stories.tsx  Badge.stories.tsx  CatalogImport.stories.tsx  GuideTab.stories.tsx  HeaderNav.stories.tsx  RegisterTab.stories.tsx  ReleaseNotesTab.stories.tsx  ServerCard.stories.tsx  ServersTab.stories.tsx  mock-data.ts
(+18 files in other folders)
