[project]
name = "crucible-registry-api"
version = "1.0.0"
description = "Crucible — MCP Registry API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-config=.coveragerc",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "htmlcov/*"]
